--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap-icons": "^1.11.1",
+    "globalize": "^1.7.0",
     "js-cookies": "^1.0.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0"
