--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap-icons": "^1.11.1",
+    "dompurify": "^3.0.6",
     "globalize": "^1.7.0",
     "js-cookies": "^1.0.4",
     "prop-types": "^15.8.1",
