--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-big-calendar": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "recharts": "^2.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
