--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
