--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.5",
+    "@tanstack/react-query-devtools": "^5.1.0",
     "@tanstack/react-store": "^0.2.1",
     "axios": "^1.5.1",
     "bootstrap-icons": "^1.11.1",
