--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.1.0",
     "@tanstack/react-store": "^0.2.1",
@@ -26,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
-    "recharts": "^2.9.0"
+    "recharts": "^2.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
