--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.1.0",
     "@tanstack/react-store": "^0.2.1",
@@ -26,8 +27,10 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.9.0",
+    "redux": "^4.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
