--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-jwt": "^1.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.9.0",
